tests/paczka1/fuzzy1/35029211.err
Error in line 2: 5MkIL S15 3,5
Error in line 15: 0oU S699 83,7
Error in line 26: 0oU S15 119,4
Error in line 30: 0oU S699 80,8
